--- a/task-tracker/src/App.css
+++ b/task-tracker/src/App.css
@@ -7,6 +7,7 @@
 
 .taskTracker-app {
   text-align: center;
+  height: 90vh;
 }
 
 .taskTracker-app h1 {
@@ -44,16 +45,18 @@
   gap: 20px;
   margin: 20px auto;
   flex-wrap: wrap;
-  min-height: 55vh;
+  min-height: 60vh;
 }
+
 
 .task {
   border: 1px solid #9c3587;
   border-radius: 6px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  width: 340px;
+  min-width: 25vw;
   height: 10vh;
   text-align: center;
   padding: 1rem;
@@ -97,3 +100,13 @@ footer {
   color: gray;
   font-size: 1.2rem;
 }
+
+
+/* Media Query */
+
+/* @media screen and (min-width: 480px) {
+  .tasks-count {
+    font-size: 1rem;
+  }
+  
+} */
