Footer added to cart page

--- a/product-catalog/src/App.css
+++ b/product-catalog/src/App.css
@@ -157,7 +157,7 @@
     width: 80%;
     margin: 30px auto;
     text-align: center;
-    min-height: 50vh;
+    min-height: 20vh;
 }
 
 .cart-container table thead {
@@ -242,6 +242,14 @@ footer .footer-form button {
     font-weight: bold;
     background-color: red;
     color: #fff;
+}
+
+.footer-links {
+    cursor: pointer;
+} 
+
+.footer-links:hover {
+    color: rgb(180,220,220);
 }
 
 
